--- a/cross_share_web/src/pages/SavedData/savedData.css
+++ b/cross_share_web/src/pages/SavedData/savedData.css
@@ -11,7 +11,19 @@
     flex-direction: column;
     align-items: center;
     color: white;
+    overflow-y: scroll;
+    scrollbar-width: auto;
 }
+.saved_data_container::-webkit-scrollbar {
+    width: 12px;
+}
+
+.saved_data_container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #fff;
+    border-radius: 10px;
+}
+
+
 
 .txt_container {
     display: grid;
